[project]
name = "pyzinga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shaz", email = "shatadrusaha@gmail.com" }
]
requires-python = "==3.12.*"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.4",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
]
